<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".KmMile">

    <TextView
            android:id="@+id/mile_tv"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="148dp"
            android:padding="5dp"
            android:text="@string/miles"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/kilometer_tv"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/kilometer"
            android:padding="5dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/mile_tv"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/mile_tv"
            app:layout_constraintTop_toBottomOf="@+id/mile_tv" />

    <EditText
            android:id="@+id/mile_et"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="148dp"
            android:inputType="number"
            android:padding="5dp"
            android:text="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toEndOf="@+id/mile_tv"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/kilo_et"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginTop="24dp"
            android:text="1"
            android:inputType="number"
            android:padding="5dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/mile_et"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/kilometer_tv"
            app:layout_constraintTop_toBottomOf="@+id/mile_et" />

    <Button
            android:id="@+id/mile_to_kilo"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="36dp"
            android:text="@string/miles_to_km"
            android:textSize="14sp"
            android:textStyle="bold"
            android:onClick="convertButtonSelect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.398"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kilometer_tv" />

    <Button
            android:id="@+id/kilo_to_mile"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/kilometer_to_mile"
            android:textSize="14sp"
            android:textStyle="bold"
            android:onClick="convertButtonSelect"
            app:layout_constraintEnd_toEndOf="@+id/mile_to_kilo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/mile_to_kilo"
            app:layout_constraintTop_toBottomOf="@+id/mile_to_kilo" />

    <ListView
            android:layout_width="379dp"
            android:layout_height="317dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kilo_to_mile" />

</android.support.constraint.ConstraintLayout>